--- a/library.html
+++ b/library.html
@@ -17,13 +17,13 @@
   <h1 class="text-3xl font-bold mb-4">Library</h1>
 
   <!-- Navigation Button -->
-  <div class="flex justify-end mb-6">
+  <div class="flex justify-end">
     <a href="index.html" class="btn">Go to Home</a>
   </div>
 
   <!-- Upload Section -->
   <div class="mb-6">
-    <label class="block mb-2 font-semibold">Upload Template / Block / Theme / Page / Subscription</label>
+    <label class="block mb-2 font-semibold">Upload Template / Block / Theme / Subscription / HTML Page</label>
     <input type="file" id="fileInput" class="mb-4 border p-2" multiple>
     <progress id="uploadProgress" value="0" max="100" class="w-full mb-4"></progress>
     <button id="uploadBtn" class="btn">Upload</button>
@@ -34,9 +34,9 @@
 
   <!-- Thumbnail Editor Modal -->
   <div id="thumbModal" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center">
-    <div class="bg-white p-4 rounded shadow-lg w-3/4 h-3/4 flex flex-col">
+    <div class="bg-white p-4 rounded shadow-lg w-3/4 h-3/4">
       <h2 class="text-xl font-bold mb-4">Edit Thumbnail</h2>
-      <div class="flex-1 flex items-center justify-center">
+      <div class="h-4/5">
         <img id="cropperImage" style="max-width:100%; max-height:100%; display:block; margin:auto;"/>
       </div>
       <div class="mt-4 flex justify-end gap-4">
@@ -47,6 +47,7 @@
   </div>
 
   <script src="https://unpkg.com/cropperjs/dist/cropper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script>
     window.addEventListener('DOMContentLoaded', () => {
       const fileInput = document.getElementById('fileInput');
@@ -63,26 +64,79 @@
       let currentEditingId = null;
       let cropper;
 
-      // Render Library Sidebar
-      function renderLibrary() {
-        libraryGrid.innerHTML = '';
-        const categories = { template: [], block: [], page: [], theme: [], subscription: [], asset: [] };
+      // --- Generate thumbnail from HTML page ---
+      async function generateThumbnail(htmlContent){
+  return new Promise(resolve=>{
+    const iframe = document.createElement('iframe');
+    iframe.style.position = 'fixed';
+    iframe.style.left = '-10000px';
+    iframe.style.top = '-10000px';
+    iframe.style.width = '800px';  // Set desired width
+    iframe.style.height = '450px'; // 16:9 ratio
+    document.body.appendChild(iframe);
 
-        library.forEach((item, index) => {
-          if(!categories[item.type]) categories[item.type] = [];
-          categories[item.type].push({...item, index});
+    const doc = iframe.contentDocument || iframe.contentWindow.document;
+    doc.open();
+    doc.write(htmlContent);
+    doc.close();
+
+    iframe.onload = async () => {
+      try {
+        // Capture at 2x resolution for sharpness
+        const canvas = await html2canvas(doc.body, {
+          backgroundColor: null,
+          width: 800,
+          height: 450,
+          scale: 2
         });
 
-        Object.keys(categories).forEach(type => {
+        // Resize canvas to card size (400x200) while keeping aspect ratio
+        const cardCanvas = document.createElement('canvas');
+        cardCanvas.width = 400;
+        cardCanvas.height = 200;
+        const ctx = cardCanvas.getContext('2d');
+        ctx.drawImage(canvas, 0, 0, 400, 200);
+
+        const dataUrl = cardCanvas.toDataURL('image/png');
+        resolve(dataUrl);
+      } catch(e) {
+        console.error("Thumbnail generation failed:", e);
+        resolve(null);
+      }
+      document.body.removeChild(iframe);
+    };
+  });
+}
+
+      // --- Render Library Grid ---
+      function renderLibrary() {
+        libraryGrid.innerHTML = '';
+
+        // Group items by type
+        const categories = {
+          page: [],
+          template: [],
+          block: [],
+          theme: [],
+          subscription: [],
+          asset: []
+        };
+
+        library.forEach((item,index)=>{
+          if(!categories[item.type]) categories[item.type]=[];
+          categories[item.type].push({...item,index});
+        });
+
+        Object.keys(categories).forEach(type=>{
           if(categories[type].length===0) return;
 
           const title = document.createElement('h3');
-          title.textContent = type.charAt(0).toUpperCase() + type.slice(1) + "s";
+          title.textContent = type.charAt(0).toUpperCase()+type.slice(1)+'s';
           title.className = "text-xl font-bold mt-6 mb-4 col-span-full";
           libraryGrid.appendChild(title);
 
-          categories[type].forEach(obj => {
-            const { index, ...item } = obj;
+          categories[type].forEach(obj=>{
+            const {index, ...item} = obj;
             const card = document.createElement('div');
             card.className = "border p-4 rounded shadow flex flex-col items-center";
 
@@ -98,39 +152,23 @@
             name.className = "font-semibold mb-2 text-center";
             card.appendChild(name);
 
-            // Upload/Edit Thumbnail
-            const thumbInput = document.createElement('input');
-            thumbInput.type='file';
-            thumbInput.accept='image/*';
-            thumbInput.className='hidden';
-            thumbInput.onchange = e => {
-              const file = e.target.files[0];
-              if(!file) return;
-              const reader = new FileReader();
-              reader.onload = ev => {
-                library[index].thumbnail = ev.target.result;
-                localStorage.setItem('sitegenLibrary', JSON.stringify(library));
-                renderLibrary();
-              };
-              reader.readAsDataURL(file);
-            };
+            // Template-specific actions
+            if(item.type==='template' || item.type==='page'){
+              const editBtn = document.createElement('button');
+              editBtn.textContent='Edit Thumbnail';
+              editBtn.className='btn mb-2';
+              editBtn.onclick = ()=>openThumbnailEditor(index);
+              card.appendChild(editBtn);
+            }
 
-            const uploadThumbBtn = document.createElement('button');
-            uploadThumbBtn.textContent = item.thumbnail ? 'Change Thumbnail' : 'Upload Thumbnail';
-            uploadThumbBtn.className = 'btn mb-2';
-            uploadThumbBtn.onclick = ()=> thumbInput.click();
-
-            card.appendChild(thumbInput);
-            card.appendChild(uploadThumbBtn);
-
-            // Delete
+            // Delete button
             const deleteBtn = document.createElement('button');
-            deleteBtn.textContent = 'Delete';
-            deleteBtn.className = 'btn bg-red-600 hover:bg-red-700';
+            deleteBtn.textContent='Delete';
+            deleteBtn.className='btn bg-red-600 hover:bg-red-700';
             deleteBtn.onclick = ()=>{
               if(confirm(`Are you sure you want to delete "${item.name}"?`)){
                 library.splice(index,1);
-                localStorage.setItem('sitegenLibrary', JSON.stringify(library));
+                localStorage.setItem('sitegenLibrary',JSON.stringify(library));
                 renderLibrary();
               }
             };
@@ -141,47 +179,72 @@
         });
       }
 
-      // Upload Templates/Blocks/etc
-      uploadBtn.onclick = () => {
+      // --- Open Thumbnail Editor ---
+      function openThumbnailEditor(index){
+        currentEditingId = index;
+        const item = library[index];
+        cropperImage.src = item.thumbnail || 'https://via.placeholder.com/800x400?text=Upload+Thumbnail';
+        thumbModal.classList.remove('hidden');
+
+        if(cropper) cropper.destroy();
+        cropper = new Cropper(cropperImage,{
+          aspectRatio:16/9,
+          viewMode:1,
+          dragMode:'move',
+          autoCropArea:1,
+        });
+      }
+
+      saveThumb.onclick = ()=>{
+        if(cropper && currentEditingId!==null){
+          const canvas = cropper.getCroppedCanvas({width:400,height:200});
+          library[currentEditingId].thumbnail = canvas.toDataURL();
+          localStorage.setItem('sitegenLibrary',JSON.stringify(library));
+          renderLibrary();
+        }
+        thumbModal.classList.add('hidden');
+      };
+
+      cancelThumb.onclick = ()=>{
+        thumbModal.classList.add('hidden');
+        if(cropper) cropper.destroy();
+      };
+
+      // --- Unified Upload Handler ---
+      uploadBtn.onclick = async ()=>{
         const files = Array.from(fileInput.files);
         if(!files.length) return;
 
-        let uploaded = 0;
-        files.forEach(file => {
+        let uploaded=0;
+        for(const file of files){
           const reader = new FileReader();
-          reader.onload = e => {
-            let type = 'asset';
-            if(file.name.endsWith('.zip')) type='template';
+          reader.onload = async e=>{
+            let type='asset';
+            if(file.name.endsWith('.html')) type='page';
+            else if(file.name.endsWith('.zip')) type='template';
             else if(file.name.endsWith('.block')) type='block';
             else if(file.name.endsWith('.theme')) type='theme';
             else if(file.name.endsWith('.sub')) type='subscription';
-            else if(file.name.endsWith('.html')) type='page';
 
-            const item = { name:file.name, type, content:e.target.result, thumbnail:null };
+            let content = e.target.result;
+            let thumbnail = null;
 
-            if(type==='template'){
-              // push to index page library only
-              try {
-                let indexLibrary = JSON.parse(localStorage.getItem('sitegenIndexTemplates') || '[]');
-                indexLibrary.push(item);
-                localStorage.setItem('sitegenIndexTemplates', JSON.stringify(indexLibrary));
-                console.log(`Template "${file.name}" sent to index page library`);
-              } catch(err){ console.error(err); }
-            } else {
-              // push other files to sidebar library
-              library.push(item);
+            if(type==='page'){
+              content = atob(content.split(',')[1]||"");
+              thumbnail = await generateThumbnail(content);
             }
 
+            library.push({name:file.name, type, content:e.target.result, thumbnail});
             uploaded++;
             uploadProgress.value = (uploaded/files.length)*100;
 
             if(uploaded===files.length){
-              localStorage.setItem('sitegenLibrary', JSON.stringify(library));
+              localStorage.setItem('sitegenLibrary',JSON.stringify(library));
               renderLibrary();
             }
           };
           reader.readAsDataURL(file);
-        });
+        }
       };
 
       renderLibrary();
